# capsicum-proxy

./: .gdbinit  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Opts.cmake  README.md
doxygen/html/: annotated.html  classAbstractProxy-members.html  classAbstractProxy.html  classAbstractProxy__coll__graph.map  classAbstractProxy__coll__graph.md5  classAbstractProxy__inherit__graph.map  classAbstractProxy__inherit__graph.md5  classAbstractProxy_a9f368f0e76ba153626f0db982ebe389c_cgraph.map  classAbstractProxy_a9f368f0e76ba153626f0db982ebe389c_cgraph.md5  classBaseProxy.html  classBaseProxy__coll__graph.map  classBaseProxy__inherit__graph.map  classBaseProxy__inherit__graph.md5  classChannel-members.html  classChannel.html  classChannel__coll__graph.map  classChannel__coll__graph.md5  classChildTerminated.html  classChildTerminated__coll__graph.md5  classChildTerminated__inherit__graph.map  classChildTerminated__inherit__graph.md5  classOperationFailed.html  classOperationFailed__coll__graph.md5  classOperationFailed__inherit__graph.map  classOperationFailed__inherit__graph.md5  classParentTerminated.html  classParentTerminated__coll__graph.map  classParentTerminated__coll__graph.md5  classParentTerminated__inherit__graph.md5  classProxy-members.html  classProxy.html  classProxyDirect-members.html  classProxyDirect.html  classProxyDirect__coll__graph.map  classProxyDirect__coll__graph.md5  classProxyDirect__inherit__graph.map  classProxyDirect__inherit__graph.md5  classProxySO-members.html  classProxySO.html  classProxySO__coll__graph.map  (+74 more)
doxygen/latex/: annotated.tex  classAbstractProxy.tex  classAbstractProxy__coll__graph.md5  classAbstractProxy__inherit__graph.md5  classAbstractProxy_a9f368f0e76ba153626f0db982ebe389c_cgraph.md5  classBaseProxy.tex  classBaseProxy__coll__graph.md5  classBaseProxy__inherit__graph.md5  classChannel.tex  classChannel__coll__graph.md5  classChildTerminated.tex  classOperationFailed.tex  files.tex  (+38 more)
include/: proxy.hpp
tests/: libtest.cpp  tests.cpp
(+50 files in other folders)
